UPDATE deprecated URL method -> URI.create(url)